fixed visible popup issue

--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,14 @@ header {
 }
 .modal {
     position: fixed;
-    margin-inline: auto;
-    left: 0;
-    right: 0;
-    z-index: -1;
     display: flex;
     gap: 16px;
     flex-direction: column;
     align-items: center;
+    margin-inline: auto;
+    left: 0; right: 0;
+    z-index: 1;
+    visibility: hidden;
     max-width: 300px;
     background-color: gainsboro;
     padding: 24px;
